Base class slides

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: change title
-author: change author
-email: change email
+title: Backbone Overview
+author: Jim Newbery
+email: james@tinnedfruit.com
 venue: change venue
 date: change date
 
